Изменить получение статистики, изменить название сущности ошибки, поправить запрос в EventRepository, убрать поле со статистикой из сущности Event